Bug 11034 - wbinfo --ping-dc fails when session expires
Summary: wbinfo --ping-dc fails when session expires
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Winbind (show other bugs)
Version: 4.2.0rc3
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-06 15:44 UTC by Christof Schmitt
Modified: 2015-01-14 20:14 UTC (History)
2 users (show)

See Also:


Attachments
patches for 4.0 (3.69 KB, patch)
2015-01-06 17:27 UTC, Christof Schmitt
cs: review+
jra: review+
Details
patches for 4.1 (3.68 KB, patch)
2015-01-06 17:45 UTC, Christof Schmitt
cs: review+
jra: review+
Details
patches for 4.2 (3.68 KB, patch)
2015-01-06 18:17 UTC, Christof Schmitt
cs: review+
jra: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christof Schmitt 2015-01-06 15:44:53 UTC
When the underlying SMB session expires, establishing a netlogon
session for the ping-dc or issuing the RPC call can fail with
an error returned from the domain controller, and this error
is returned to the caller of wbinfo --ping-dc. Since the purpose
of this call is to check whether a DC is available and responding,
this error should not be returned to the caller of wbinfo.

Fix this by introducing a retry to reestablish the  SMB session
during the ping-dc call, if the DC indicates that the session
has expired.
Comment 1 Christof Schmitt 2015-01-06 17:27:58 UTC
Created attachment 10581 [details]
patches for 4.0
Comment 2 Christof Schmitt 2015-01-06 17:45:57 UTC
Created attachment 10583 [details]
patches for 4.1
Comment 3 Christof Schmitt 2015-01-06 18:17:50 UTC
Created attachment 10584 [details]
patches for 4.2
Comment 4 Jeremy Allison 2015-01-06 19:05:54 UTC
Re-assigning to Karolin for inclusion in 4.0.next, 4.1.next and 4.2.0.
Comment 5 Karolin Seeger 2015-01-06 20:35:48 UTC
(In reply to Jeremy Allison from comment #4)
Pushed to autobuild-v4-[0|1|2]-test.
Comment 6 Karolin Seeger 2015-01-14 20:14:56 UTC
(In reply to Karolin Seeger from comment #5)
Pushed to all branches.
Closing out bug report.

Thanks!